--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696" 
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -19,14 +20,21 @@
         <!--Pivot Control-->
         <controls:Pivot Title="My Short Codes">
             <!--Pivot item one-->
-            <controls:PivotItem Header="All">
+            <controls:PivotItem Header="all">
                 <!--Double line list with text wrapping-->
-                <ListBox x:Name="FirstListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllShortCodes}">
+                <ListBox x:Name="FirstListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllShortCodes}" SelectionChanged="CodeListSelectionChanged">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                           <StackPanel Margin="0,0,0,17" Width="432">
-                              <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                <TextBlock Text="{Binding Code}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                <toolkit:ContextMenuService.ContextMenu>
+                                    <toolkit:ContextMenu x:Name="sectionContextMenu">
+                                        <toolkit:MenuItem Header="Edit Code" />
+                                        <toolkit:MenuItem Header="Delete Code" />
+                                    </toolkit:ContextMenu>
+                                </toolkit:ContextMenuService.ContextMenu>
+
+                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                                <TextBlock Text="{Binding Code}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextAccentStyle}"/>
                           </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
@@ -34,9 +42,9 @@
             </controls:PivotItem>
  
             <!--Pivot item two-->
-            <controls:PivotItem Header="Recent"> 
+            <controls:PivotItem Header="recent"> 
                 <!--Triple line list no text wrapping-->
-                <ListBox x:Name="SecondListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllShortCodes}">
+                <ListBox x:Name="SecondListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllShortCodes}" SelectionChanged="CodeListSelectionChanged">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,0,0,17">
@@ -53,7 +61,7 @@
     <!--Sample code showing usage of ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Images/appbar.add.rest.png" Text="Add" Click="ApplicationBarAddNewClick" />
+            <shell:ApplicationBarIconButton IconUri="/Images/appbar_add.png" Text="Add" Click="ApplicationBarAddNewClick" />
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="Add New" Click="ApplicationBarAddNewClick"/>
             </shell:ApplicationBar.MenuItems>
