--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
@@ -28,7 +28,7 @@
                           <StackPanel Margin="0,0,0,17" Width="432">
                                 <toolkit:ContextMenuService.ContextMenu>
                                     <toolkit:ContextMenu x:Name="sectionContextMenu">
-                                        <toolkit:MenuItem Header="Edit Code" />
+                                        <toolkit:MenuItem Header="Edit Code" Click="EditItemClick" />
                                         <toolkit:MenuItem Header="Delete Code" />
                                     </toolkit:ContextMenu>
                                 </toolkit:ContextMenuService.ContextMenu>
