--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
@@ -17,43 +17,41 @@
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
+        <Grid.Resources>
+            <DataTemplate x:Key="ShortCodeListTemplate">
+                <StackPanel Margin="0,0,0,17" Width="432">
+                    <toolkit:ContextMenuService.ContextMenu>
+                        <toolkit:ContextMenu x:Name="sectionContextMenu">
+                            <toolkit:MenuItem Header="Edit Code" Click="EditItemClick" />
+                            <toolkit:MenuItem Header="Delete Code" Click="DeleteItemClick"  />
+                        </toolkit:ContextMenu>
+                    </toolkit:ContextMenuService.ContextMenu>
+
+                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                    <TextBlock Text="{Binding Code}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextAccentStyle}"/>
+                </StackPanel>
+            </DataTemplate>
+        </Grid.Resources>
         <!--Pivot Control-->
         <controls:Pivot Title="My Short Codes">
             <!--Pivot item one-->
             <controls:PivotItem Header="all">
                 <!--Double line list with text wrapping-->
-                <ListBox x:Name="FirstListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllShortCodes}" SelectionChanged="CodeListSelectionChanged">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                          <StackPanel Margin="0,0,0,17" Width="432">
-                                <toolkit:ContextMenuService.ContextMenu>
-                                    <toolkit:ContextMenu x:Name="sectionContextMenu">
-                                        <toolkit:MenuItem Header="Edit Code" Click="EditItemClick" />
-                                        <toolkit:MenuItem Header="Delete Code" />
-                                    </toolkit:ContextMenu>
-                                </toolkit:ContextMenuService.ContextMenu>
-
-                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                <TextBlock Text="{Binding Code}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextAccentStyle}"/>
-                          </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
+                <ListBox x:Name="FirstListBox" Margin="0,0,-12,0" 
+                         ItemsSource="{Binding AllShortCodes}" 
+                         ItemTemplate="{StaticResource ShortCodeListTemplate}"
+                         SelectionChanged="CodeListSelectionChanged">
                 </ListBox>
             </controls:PivotItem>
  
             <!--Pivot item two-->
             <controls:PivotItem Header="recent"> 
                 <!--Triple line list no text wrapping-->
-                <ListBox x:Name="SecondListBox" Margin="0,0,-12,0" ItemsSource="{Binding AllShortCodes}" SelectionChanged="CodeListSelectionChanged">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Margin="0,0,0,17">
-                                    <TextBlock Text="{Binding Name}" TextWrapping="NoWrap" Margin="12,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                    <TextBlock Text="{Binding Code}" TextWrapping="NoWrap" Margin="12,-6,0,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
+                <ListBox x:Name="SecondListBox" Margin="0,0,-12,0" 
+                         ItemsSource="{Binding RecentShortCodes}" 
+                         ItemTemplate="{StaticResource ShortCodeListTemplate}"
+                         SelectionChanged="CodeListSelectionChanged">
+                </ListBox>
             </controls:PivotItem>
         </controls:Pivot>
     </Grid>
