--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/MainPage.xaml
@@ -53,6 +53,15 @@
                          SelectionChanged="CodeListSelectionChanged">
                 </ListBox>
             </controls:PivotItem>
+            
+            <controls:PivotItem Header="most">
+                <!--Triple line list no text wrapping-->
+                <ListBox x:Name="MostListBox" Margin="0,0,-12,0" 
+                         ItemsSource="{Binding MostUsedShortCodes}" 
+                         ItemTemplate="{StaticResource ShortCodeListTemplate}"
+                         SelectionChanged="CodeListSelectionChanged">
+                </ListBox>
+            </controls:PivotItem>
         </controls:Pivot>
     </Grid>
  
