--- a/Source/MyShortCodes/MyShortCodes.Phone.UI/Views/AddPage.xaml
+++ b/Source/MyShortCodes/MyShortCodes.Phone.UI/Views/AddPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="MyShortCodes.Phone.UI.AddPage"
+    x:Class="MyShortCodes.Phone.UI.Views.AddPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
